Fixed Instagram spacing mobile

--- a/src/components/insta-feed/InstaFeed.module.scss
+++ b/src/components/insta-feed/InstaFeed.module.scss
@@ -8,7 +8,7 @@
     width: 100%;
     .icon {
         width: 50px;
-        height: auto;
+        height: 50px;
         color: $black;
     }
     .feed_container {
